# CST8152-A12-EasyScript

A12_EASYSCRIPT/: A12_EASYSCRIPT.cpp  A12_EASYSCRIPT.h  CMakeLists.txt  Compilers.c  Compilers.h  MainReader.c  MainScanner.c  Reader.c  Reader.h  Scanner.c  Scanner.h  launch.vs.json  repos.lnk
A12_EASYSCRIPT/a22files/code/: MainScanner.c  Scanner.c  Scanner.h
A12_EASYSCRIPT/a22files/input/: A22.bat  INPUT1_Hello.sof  INPUT2_Volume.sof  INPUT3_Factorial.sof  INPUT4_Datatypes.sof  INPUT5_General.sof  INPUT6_Big.sof
